Changes for 2.2.0:

- API change from oac-tree: IJobInfoIO::NextInstructionsUpdated -> IJobInfoIO::ProcedureTicked

Changes for 2.1.0:

- Update pom for CODAC 7.3

Changes for 2.0.0:

- Rename to oac-tree-server
- Adapt to support sequencer name change to oac-tree

Changes for 1.0.0:

- First version for official release

Changes for 0.1.0:

- Initial version